--- a/glfw_opengl3/imgui.ini
+++ b/glfw_opengl3/imgui.ini
@@ -44,6 +44,11 @@ Size=499,136
 IsChild=1
 Size=200,100
 
+[Window][MyApp]
+Pos=60,60
+Size=80,77
+Collapsed=0
+
 [Table][0xB6880529,2]
 RefScale=13
 Column 0  Sort=0^
