--- a/glfw_opengl3/Makefile
+++ b/glfw_opengl3/Makefile
@@ -1,107 +1,32 @@
-#
-# Cross Platform Makefile
-# Compatible with MSYS2/MINGW, Ubuntu 14.04.1 and Mac OS X
-#
-# You will need GLFW (http://www.glfw.org):
-# Linux:
-#   apt-get install libglfw-dev
-# Mac OS X:
-#   brew install glfw
-# MSYS2:
-#   pacman -S --noconfirm --needed mingw-w64-x86_64-toolchain mingw-w64-x86_64-glfw
-#
+.PHONY: all configure build clean full-clean fresh run
 
-#CXX = g++
-#CXX = clang++
+# Out-of-source CMake build
+BUILD_DIR ?= build
+CONFIG ?= Debug
+CMAKE ?= cmake
 
-EXE = example_glfw_opengl3
-IMGUI_DIR = ../imgui
-IMPLOT_DIR = ../implot
-SRC_DIR = src
-SOURCES = main.cpp
-SOURCES += $(SRC_DIR)/app_main.cpp
-SOURCES += $(SRC_DIR)/settings/settings.cpp
-SOURCES += $(SRC_DIR)/plotter/plotter.cpp
-SOURCES += $(IMGUI_DIR)/imgui.cpp $(IMGUI_DIR)/imgui_demo.cpp $(IMGUI_DIR)/imgui_draw.cpp $(IMGUI_DIR)/imgui_tables.cpp $(IMGUI_DIR)/imgui_widgets.cpp
-SOURCES += $(IMGUI_DIR)/backends/imgui_impl_glfw.cpp $(IMGUI_DIR)/backends/imgui_impl_opengl3.cpp
-SOURCES += $(IMPLOT_DIR)/implot.cpp $(IMPLOT_DIR)/implot_items.cpp $(IMPLOT_DIR)/implot_demo.cpp
-OBJS = $(addsuffix .o, $(basename $(notdir $(SOURCES))))
-UNAME_S := $(shell uname -s)
-LINUX_GL_LIBS = -lGL
+all: build
 
-CXXFLAGS = -std=c++11 -I$(IMGUI_DIR) -I$(IMGUI_DIR)/backends -I$(IMPLOT_DIR) -I$(SRC_DIR)
-CXXFLAGS += -g -Wall -Wformat
-LIBS =
+configure:
+	$(CMAKE) -S . -B $(BUILD_DIR) -DCMAKE_BUILD_TYPE=$(CONFIG)
 
-##---------------------------------------------------------------------
-## OPENGL ES
-##---------------------------------------------------------------------
+build: configure
+	$(CMAKE) --build $(BUILD_DIR) --config $(CONFIG)
 
-## This assumes a GL ES library available in the system, e.g. libGLESv2.so
-# CXXFLAGS += -DIMGUI_IMPL_OPENGL_ES2
-# LINUX_GL_LIBS = -lGLESv2
-
-##---------------------------------------------------------------------
-## BUILD FLAGS PER PLATFORM
-##---------------------------------------------------------------------
-
-ifeq ($(UNAME_S), Linux) #LINUX
-	ECHO_MESSAGE = "Linux"
-	LIBS += $(LINUX_GL_LIBS) `pkg-config --static --libs glfw3`
-
-	CXXFLAGS += `pkg-config --cflags glfw3`
-	CFLAGS = $(CXXFLAGS)
-endif
-
-ifeq ($(UNAME_S), Darwin) #APPLE
-	ECHO_MESSAGE = "Mac OS X"
-	LIBS += -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo
-	LIBS += -L/usr/local/lib -L/opt/local/lib -L/opt/homebrew/lib
-	#LIBS += -lglfw3
-	LIBS += -lglfw
-
-	CXXFLAGS += -I/usr/local/include -I/opt/local/include -I/opt/homebrew/include
-	CFLAGS = $(CXXFLAGS)
-endif
-
-ifeq ($(OS), Windows_NT)
-	ECHO_MESSAGE = "MinGW"
-	LIBS += -lglfw3 -lgdi32 -lopengl32 -limm32
-
-	CXXFLAGS += `pkg-config --cflags glfw3`
-	CFLAGS = $(CXXFLAGS)
-endif
-
-##---------------------------------------------------------------------
-## BUILD RULES
-##---------------------------------------------------------------------
-
-%.o:%.cpp
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
-
-%.o:$(IMGUI_DIR)/%.cpp
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
-
-%.o:$(IMGUI_DIR)/backends/%.cpp
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
-
-%.o:$(IMPLOT_DIR)/%.cpp
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
-
-%.o:$(SRC_DIR)/%.cpp
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
-
-%.o:$(SRC_DIR)/plotter/%.cpp
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
-
-%.o:$(SRC_DIR)/settings/%.cpp
-	$(CXX) $(CXXFLAGS) -c -o $@ $<
-
-all: $(EXE)
-	@echo Build complete for $(ECHO_MESSAGE)
-
-$(EXE): $(OBJS)
-	$(CXX) -o $@ $^ $(CXXFLAGS) $(LIBS)
+run: build
+	@exe="$(BUILD_DIR)/glfw_opengl3"; \
+	[ -x "$$exe" ] || exe="$(BUILD_DIR)/$(CONFIG)/glfw_opengl3"; \
+	[ -x "$$exe" ] || { echo "Executable not found in build directory"; exit 1; }; \
+	"$$exe"
 
 clean:
-	rm -f $(EXE) $(OBJS)
+	@if [ -d "$(BUILD_DIR)" ]; then \
+		$(CMAKE) --build $(BUILD_DIR) --target clean --config $(CONFIG) || true; \
+	fi
+
+full-clean:
+	@rm -rf "$(BUILD_DIR)"
+	@# Remove leftover root-level objects/executables so we never rely on prebuilt artefacts
+	@find . -maxdepth 1 -type f \( -name '*.o' -o -name '*.obj' -o -name 'glfw_opengl3' -o -name 'example_glfw_opengl3' -o -name '*.exe' \) -delete
+
+fresh: full-clean all
