changed cmake to inlcude all of src, added workflow and basic bar graph

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "makefile.makefilePath": "/Users/akame/Documents/E-traxx/PULSAR (Powertrain Unit for Logic, Safety And Regulation)/ImGui/glfw_opengl3/Makefile",
-    "cmake.sourceDirectory": "/Users/akame/Documents/E-traxx/PULSAR (Powertrain Unit for Logic, Safety And Regulation)/ImGui/glfw_opengl3"
+    "cmake.sourceDirectory": "/Users/akame/Documents/E-traxx/Pitlane/Pitlane_ControlDesk/glfw_opengl3"
 }
