added serial port discovery in settings and technically a serial port reader worker thread

--- a/glfw_opengl3/imgui.ini
+++ b/glfw_opengl3/imgui.ini
@@ -28,7 +28,7 @@ DockId=0x00000001,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1280,800
+Size=2560,1381
 Collapsed=0
 
 [Window][Example: Assets Browser]
@@ -74,8 +74,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Settings Window]
-Pos=1030,19
-Size=250,781
+Pos=2129,19
+Size=431,1362
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -85,23 +85,35 @@ Size=311,105
 Collapsed=0
 
 [Window][mode?]
-Pos=439,347
+Pos=-585,121
 Size=395,105
 Collapsed=0
 
 [Window][CAN Sniffer Window]
 Pos=0,19
-Size=1028,334
+Size=2127,627
 Collapsed=0
 DockId=0x0000000B,0
+
+[Window][Log]
+Pos=0,648
+Size=2127,733
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Example: Log]
+Pos=0,648
+Size=2127,733
+Collapsed=0
+DockId=0x0000000C,1
 
 [Table][0xB6880529,2]
 RefScale=13
 Column 0  Sort=0^
 
 [Docking][Data]
-DockSpace           ID=0xC0DFADC4 Window=0xD0388BC8 Pos=200,126 Size=1280,781 Split=X
-  DockNode          ID=0x00000009 Parent=0xC0DFADC4 SizeRef=1028,781 Split=X
+DockSpace           ID=0xC0DFADC4 Window=0xD0388BC8 Pos=-382,-1362 Size=2560,1362 Split=X
+  DockNode          ID=0x00000009 Parent=0xC0DFADC4 SizeRef=847,781 Split=X
     DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=637,781 Split=X
       DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=1051,754 Selected=0x5E5F7166
       DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=207,754 Selected=0x1FC7AC8C
@@ -110,7 +122,7 @@ DockSpace           ID=0xC0DFADC4 Window=0xD0388BC8 Pos=200,126 Size=1280,781 Sp
       DockNode      ID=0x00000002 Parent=0x00000006 SizeRef=759,781 Split=X Selected=0xBF91F0DD
         DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=994,781 Selected=0x005D6352
         DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=32,781 Split=Y
-          DockNode  ID=0x0000000B Parent=0x00000008 SizeRef=389,334 Selected=0x45027873
-          DockNode  ID=0x0000000C Parent=0x00000008 SizeRef=389,445 CentralNode=1
-  DockNode          ID=0x0000000A Parent=0xC0DFADC4 SizeRef=250,781 Selected=0xD337A76C
+          DockNode  ID=0x0000000B Parent=0x00000008 SizeRef=389,627 Selected=0x45027873
+          DockNode  ID=0x0000000C Parent=0x00000008 SizeRef=389,152 CentralNode=1 Selected=0x38CCB771
+  DockNode          ID=0x0000000A Parent=0xC0DFADC4 SizeRef=431,781 Selected=0xD337A76C
 
