--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "implot"]
 	path = implot
 	url = git@github.com:epezent/implot.git
+[submodule "ImGuiFileDialog"]
+	path = ImGuiFileDialog
+	url = git@github.com:aiekick/ImGuiFileDialog.git
