--- a/glfw_opengl3/imgui.ini
+++ b/glfw_opengl3/imgui.ini
@@ -85,7 +85,7 @@ Size=311,105
 Collapsed=0
 
 [Window][mode?]
-Pos=312,321
+Pos=120,281
 Size=395,105
 Collapsed=0
 
@@ -107,12 +107,25 @@ Size=847,152
 Collapsed=0
 DockId=0x0000000C,1
 
+[Window][Select DBC file##dbc_file_dialog]
+Pos=60,60
+Size=871,581
+Collapsed=0
+
 [Table][0xB6880529,2]
 RefScale=13
 Column 0  Sort=0^
 
+[Table][0x1CCEB543,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE298276D,4]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace           ID=0xC0DFADC4 Window=0xD0388BC8 Pos=258,-1216 Size=1280,781 Split=X
+DockSpace           ID=0xC0DFADC4 Window=0xD0388BC8 Pos=200,126 Size=1280,781 Split=X
   DockNode          ID=0x00000009 Parent=0xC0DFADC4 SizeRef=847,781 Split=X
     DockNode        ID=0x00000003 Parent=0x00000009 SizeRef=637,781 Split=X
       DockNode      ID=0x00000004 Parent=0x00000003 SizeRef=1051,754 Selected=0x5E5F7166
