--- a/glfw_opengl3/CMakeLists.txt
+++ b/glfw_opengl3/CMakeLists.txt
@@ -3,6 +3,7 @@ project(glfw_opengl3_example LANGUAGES CXX)
 
 set(IMGUI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../imgui)
 set(IMPLOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../implot)
+set(IMGUIFILEDIALOG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../ImGuiFileDialog)
 set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 file(GLOB_RECURSE SRC_SOURCES CONFIGURE_DEPENDS
@@ -24,17 +25,24 @@ file(GLOB IMPLOT_SOURCES CONFIGURE_DEPENDS
   ${IMPLOT_DIR}/*.cpp
 )
 
+file(GLOB IMGUIFILEDIALOG_SOURCES CONFIGURE_DEPENDS
+  ${IMGUIFILEDIALOG_DIR}/*.cpp
+)
+
+
 add_executable(glfw_opengl3
   main.cpp
   ${SRC_SOURCES}
   ${IMGUI_SOURCES}
   ${IMPLOT_SOURCES}
+  ${IMGUIFILEDIALOG_SOURCES}
 )
 
 target_include_directories(glfw_opengl3 PRIVATE
   ${IMGUI_DIR}
   ${IMGUI_DIR}/backends
   ${IMPLOT_DIR}
+  ${IMGUIFILEDIALOG_DIR}
   ${SRC_DIR}
 )
 
