--- a/glfw_opengl3/CMakeLists.txt
+++ b/glfw_opengl3/CMakeLists.txt
@@ -4,7 +4,15 @@ project(glfw_opengl3_example LANGUAGES CXX)
 set(IMGUI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../imgui)
 set(IMPLOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../implot)
 set(IMGUIFILEDIALOG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../ImGuiFileDialog)
+set(DBCPPP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../dbcppp)
 set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+# Build only the dbcppp library (skip its tools/tests/examples)
+set(build_kcd OFF CACHE BOOL "" FORCE)
+set(build_tools OFF CACHE BOOL "" FORCE)
+set(build_tests OFF CACHE BOOL "" FORCE)
+set(build_examples OFF CACHE BOOL "" FORCE)
+add_subdirectory(${DBCPPP_DIR} ${CMAKE_CURRENT_BINARY_DIR}/dbcppp)
 
 file(GLOB_RECURSE SRC_SOURCES CONFIGURE_DEPENDS
   ${SRC_DIR}/*.cpp
@@ -46,7 +54,7 @@ target_include_directories(glfw_opengl3 PRIVATE
   ${SRC_DIR}
 )
 
-target_compile_features(glfw_opengl3 PRIVATE cxx_std_11)
+target_compile_features(glfw_opengl3 PRIVATE cxx_std_17)
 
 find_package(OpenGL REQUIRED)
 find_package(glfw3 3.3 REQUIRED)
@@ -62,6 +70,7 @@ endif()
 target_link_libraries(glfw_opengl3 PRIVATE
   OpenGL::GL
   ${GLFW_TARGET}
+  dbcppp
 )
 
 if(APPLE)
