--- a/glfw_opengl3/imgui.ini
+++ b/glfw_opengl3/imgui.ini
@@ -108,7 +108,7 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Select DBC file##dbc_file_dialog]
-Pos=60,60
+Pos=215,59
 Size=871,581
 Collapsed=0
 
@@ -121,6 +121,10 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xE298276D,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xD14B79E2,4]
 RefScale=13
 Column 0  Sort=0v
 
