--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,24 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-
-
+# C/C++ build artifacts
 *.o
+*.a
+*.so
+*.dylib
+*.exe
+*.out
+
+# CMake build directories
+build/
+cmake-build-*/
+_build/
+
+# Compiled binaries (add specific names as needed)
+glfw_opengl3/example_glfw_opengl3
+
+# IDE
+.vscode/
+.idea/
+*.xcworkspace/
+*.xcodeproj/
