--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,27 +14,24 @@ jobs:
         os: [ubuntu-22.04, macos-14]
 
     steps:
-      - name: Checkout repository (with submodules)
+      - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          submodules: recursive
-          fetch-depth: 0
 
       - name: Install dependencies (Linux)
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake pkg-config \
+          sudo apt-get install -y build-essential cmake ninja-build pkg-config \
             libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev xorg-dev
 
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
           brew update
-          brew install glfw
+          brew install glfw ninja
 
       - name: Configure
-        run: cmake -S glfw_opengl3 -B build -DCMAKE_BUILD_TYPE=Release
+        run: cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=Release
 
       - name: Build
         run: cmake --build build --config Release --parallel
