--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,13 +22,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential cmake ninja-build pkg-config \
-            libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev xorg-dev
+            libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev xorg-dev doxygen
 
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
           brew update
-          brew install glfw ninja
+          brew install glfw ninja doxygen
 
       - name: Configure
         run: cmake -S . -B build -G Ninja -DCMAKE_BUILD_TYPE=Release
